# packing-solver

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
packsolver/: box.py  container.py  main.py  packsolver.py  packsolver2d.py  packsolver3d.py
tests/: sample1.toml  sample2.toml  test_box.py  test_container.py  test_main.py  test_packsolver.py  test_packsolver2d.py  test_packsolver3d.py
