[tool.poetry]
name = "packing-solver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
python-dotenv = "^0.17.0"
amplify = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.1"
mypy = "^0.812"
black = "^21.4b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
